--- a/public/style.css
+++ b/public/style.css
@@ -189,5 +189,16 @@ body:not(.dark-mode) .btn-dark.dropdown-toggle {
     background-color: #343a40 !important;
 }
 
+body.dark-mode input.form-control {
+    background-color: #222 !important;
+    color: #eee !important;
+    border: 1px solid #555 !important;
+}
+
+body.dark-mode input.form-control::placeholder {
+    color: #aaa !important;
+}
+
+
 
 
