Change Name to benzo

--- a/public/style.css
+++ b/public/style.css
@@ -4,8 +4,8 @@ input.edit {
 td {
     vertical-align: middle;
 }
-#clonexForm input,
-#clonexForm button {
+#benzosForm input,
+#benzosForm button {
     min-height: 38px;
 }
 
