--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,12 @@ td {
     min-height: 38px;
 }
 
+select.disabled {
+    background-color: #625e5e !important;
+    cursor: not-allowed;
+    opacity: 0.7;
+}
+
 body.dark-mode {
     background-color: #121212 !important;
     color: #e0e0e0 !important;
