--- a/public/style.css
+++ b/public/style.css
@@ -279,3 +279,10 @@ body.dark-mode .flatpickr-time .arrowUp,
 body.dark-mode .flatpickr-time .arrowDown {
     color: #eee !important;
 }
+
+
+.disabled-blur {
+    opacity: 0.4;
+    pointer-events: none;
+    filter: blur(4.8px);
+}
